nav+footer overlap fix

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -214,7 +214,6 @@ h1, h2, h3, h4, h5, h6 {
 .dashboard nav {
     position: fixed;
     bottom:0;
-    margin-top: 1em;
     grid-area: nav;
     background: var(--bg-accent-color);
     background-size: 200%;
@@ -451,7 +450,8 @@ footer {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    padding: 2em;
+    padding: 1em;
+    margin-bottom:6em;
 
     a {
         color: black;
